Avoid jdk8 incompatible code in CodeStyleTest